[metadata]
name = github_stars_by_topic
version = attr: github_stars_by_topic.__version__
description = Generate a list of your GitHub stars by topic - automatically!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lorey/github-stars-by-topic
author = Karl Lorey
author_email = git@karllorey.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    Markdown==3.3.6
    PyGithub==1.55
    beautifulsoup4==4.11.1
    numpy==1.21.6
    scikit-learn==1.0.2
python_requires = >=3.7
packages_data =
    github_stars_by_topics = py.typed

[options.entry_points]
console_scripts =
    ghst = github_stars_by_topics.main:main

[options.extras_require]
all =
    %(dev)s
    %(example)s
dev =
    %(types)s
    black
    flake8
    isort
    mypy
    pre-commit
    setuptools>=46.4.0
    types-setuptools
example =
    Deprecated==1.2.10
    PyJWT==1.7.1
    certifi==2020.6.20
    chardet==3.0.4
    idna==2.10
    joblib==0.16.0
    requests==2.24.0
    scipy==1.5.1
    soupsieve==2.0.1
    threadpoolctl==2.1.0
    urllib3==1.25.9
    wrapt==1.12.1
types =
    types-Markdown
    types-beautifulsoup4
    types-setuptools

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
